--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,17 +1,16 @@
-/* These styles are used if a demo specific stylesheet is not present */
 
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: border-box;
-}
+} */
 
-body,
+/* body,
 html {
   background-color: #f6f9fc;
   font-size: 18px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-}
+} */
 
 form {
   max-width: 800px;
@@ -26,7 +25,7 @@ label {
   display: block;
 }
 
-button {
+/* button {
   white-space: nowrap;
   border: 0;
   outline: 0;
@@ -58,7 +57,7 @@ button:hover {
 
 button[disabled] {
   opacity: 0.6;
-}
+} */
 
 input,
 select {
